# miniflux-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/miniflux_mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_server.py
