[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniflux-mcp"
version = "0.1.0"
description = "A read-only MCP server for the Miniflux RSS reader"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
dependencies = [
    "mcp>=1.12",
    "httpx>=0.28",
]

[project.scripts]
miniflux-mcp = "miniflux_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0",
    "ruff>=0.14",
    "pyright>=1.1",
    "pre-commit>=4.0",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/miniflux_mcp"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["F401", "F811"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/__pycache__/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers", "--showlocals", "-m", "not integration and not slow"]
markers = [
    "unit: Unit tests",
    "integration: Tests hitting external services",
    "slow: Long-running tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
